# youtube_comment_analysis

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  appspec.yml  deployment-to-aws-instructions.txt  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cicd.yaml
backend/: requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: sentiment.py  youtube.py
backend/app/core/: config.py
backend/app/schemas/: sentiment.py  youtube.py
backend/app/services/: sentiment_predictor.py  sentiment_service.py  visual_service.py  youtube_service.py
deploy/scripts/: start_docker.sh
docs/: mkdocs.yml
docs/docs/: index.md
dvc_plots/: index.html
models/: model.pkl  scaler.pkl  tfidf.pkl
notebooks/: 1.0-rnk-initial-data-exploration.ipynb  2.0-rnk-data-preprocess_eda.ipynb  2.1-rnk-data-process-eda.ipynb  3.0-rnk-build-baseline.ipynb  3.1-rnk-feature-representation.ipynb  3.2-rnk-max-features.ipynb  3.3-rnk-scaling.ipynb  3.4-rnk-imbalance-learning.ipynb  3.5-rnk-model-selection.ipynb  4.1-rnk-lightgbm-tuning.ipynb  4.2-rnk-logistic-regression-tuning.ipynb
references/: .gitignore
reports/: metrics.json
reports/model/: classification_report_baseline.txt  classification_report_baseline_smote.txt
tests/: test_api.py  test_data.py  test_model.py
youtube_comment_analysis/: __init__.py  config.py  dataset.py  evaluate.py  features.py  plots.py  preprocessing.py
youtube_comment_analysis/modeling/: predict.py  train.py
