[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "youtube_comment_analysis"
version = "0.0.1"
description = "An end-to-end data science project on YouTube comment analysis."
authors = [
  { name = "rahulnamilakonda" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["youtube_comment_analysis"]
include = ["pyproject.toml", "youtube_comment_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["youtube_comment_analysis"]
force-sort-within-sections = true

